# lux

./: .TODO.swp  .gitignore  CHANGELOG  DOMAINS  IDEAS  IDEAS   Makefile  Makefile.in  RATIONALE  README.md  TESTMEHOE  TODO  USAGE.md  a.lua  bridge.1.c  bridge.1.h  bridge.c  bridge.h  c.lua  clitest.sh  config.c  config.status  configure  configure.ac  counter.c  httptest.c  hypno-admin.c  hypno.html  hypno.log.tail  hypnob.c  ldump.c  lua.c  luabind.c  luabind.h  main.c  obconnect.c  obmgr.c  render.c  router.c  router.lua  (+18 more)
app/: dep.lua
docs/: config.lua  index.html
docs/assets/: 4xx-view.css  5xx-view.css
docs/static/: index.html
docs/www/: config.lua
docs/www/assets/: base.css
etc/: cert.template  cert.template.in  etc.hypno.hypno.conf  etc.hypno.hypno.lua  etc.rc.d.hypno.init  etc.systemd.system.hypno.service
example/: config.lua  data.lua  fsets.lua
example/c/: Makefile  README.md  dylib.c  main.c
example/c/static/: default.css
example/errors.com/: data.lua
example/errors.com/models/: failure.lua
example/errors.com/views/: failure.html
example/html/: README.md  index.html
example/khan.org/: data.lua
example/khan.org/app/: simple.lua
example/khan.org/models/: default.lua  simple.lua
example/khan.org/views/: simple.html
example/khan.org/views/pdf/: multi.html
example/lua.local/: config.lua  list
example/lua.local/app/: db.lua  dispatch.lua  filesystem.lua  hash.lua  hello.lua  http.lua  json.lua  rand.lua
example/lua.local/tests/filesystem/: example-financial-aid.csv
example/lua.local/views/: hello.tpl
example/luamvc/: config.lua
example/luamvc/app/: artist.lua  home.lua  model3.lua  view2.tpl
example/luamvc/views/: artist.tpl  body.tpl  tail.tpl
example/non/app/: cycle-a.lua  cycle-c.lua
example/non/views/: default.html
example/reachthegoal.net/: data.lua
example/reachthegoal.net/models/: default.lua
example/reachthegoal.net/views/: default.html
example/static.local/: index.html
example/system/models/: check.lua  log.lua  multi.lua  view.lua
example/tls/: config.lua  index.html
example/tls/app/: model.lua
example/tls/assets/: index.css
example/tls/misc/: README
example/tls/views/: model.tpl
example1/app/: cycle-a.lua  cycle-b.lua  default.lua
move/: getItMoving.txt  index.html
recipes/: using_a_self_signed_certificate.md
share/: ROBOTS.TXT  assets.standard.css  config.example.lua  config.lua  etc.hypno.hypno.lua  etc.systemd.system.hypno.service
src/: aeon_thumb_favicon.c  cli.c  config-test.c  config.c  config.h  config.h.in  configs.c  configs.h  counter.c  ctx-http.c  ctx-http.h  ctx-https.c  ctx-https.h  ctx-test.c  ctx-test.h  database-test.c  database.c  database.h  db-sqlite.c  db-sqlite.h  dirent-filter.c  dylib.c  filter-c-test.c  filter-c.c  filter-c.h  filter-dirent.c  filter-dirent.h  filter-echo.c  filter-echo.h  filter-lua.c  filter-lua.h  filter-luadump.c  filter-luadump.h  filter-memory.c  filter-memory.h  filter-redirect.h  filter-static-test.c  filter-static.c  filter-static.h  filter-test.c  (+68 more)
src/cli/: cli.c  cliutils.h  harness.c  harness_.c  main.c  package.c  server.c  tls.c
src/ctx/: ctx-dns.h  ctx-http.c  ctx-http.h  ctx-https.c  ctx-https.h  ctx-return.c  ctx-return.h  ctx.h
src/filters/: filter-dirent.c  filter-dirent.h  filter-echo.c  filter-echo.h  filter-lua.c  filter-lua.h  filter-redirect.c  filter-redirect.h  filter-static.c  filter-static.h  filter.c  filter.h
src/logging/: log.c  log.h
src/lua/: .http.c.swp  db.c  db.h  dec.c  dec.h  echo.c  echo.h  enc.c  enc.h  encdec.c  encdec.h  filesystem.c  filesystem.h  hash.c  hash.h  http.c  http.h  json.c  json.h  lib.c  lib.h  lua.c  lua.h  rand.c  rand.h  response.c  response.h  session.c  session.h
src/lua/tests/: Makefile.in  hash.c
src/serialization/: json.h
src/server/: multithread.c  multithread.h  server.c  server.h  single.c  single.h
src/test/: config-test.c  database-test.c  filter-c-test.c  filter-static-test.c  filter-test.c  filter-test.h  hosts-test.c  loader-test.c  luabind-test.c  render-test.c  router-test.c  routes-test.c  server-test.c  socket-test.c  util-test.c
tests/: 2016-general-election-summary-headers.csv  2016-general-election-summary.csv  2016-general-election-summary.sql  agg.c  beat-hash.sh  c.lua  chains.c  char-char.base64  char-char.c  d.lua  depth.c  g.lua  ges.db  ges.db.orig  render.c  router.c  router.lua.spec  shib.db  sql.c  test.sh  why_tif.c
tests/chains-data/: ezmodel.lua  h.lua  model1.lua  model2.lua  view1.tpl  view2.tpl
tests/config/: badsyntax.lua  def.lua  etc.lua  good.lua  main.lua  wrong.lua
tests/d-data/: b.lua  c.lua  e.lua  f.lua
tests/example-configs/: config.lua  static.lua
tests/filter-lua/: TODO
tests/filter-static/binary/: config.lua
tests/filter-static/text/: 1.html  2.html  3.html  4.html  5.html  index.css  index.js  universal-magnetic.html
tests/json/: Makefile  README.md  array-with-empty-objects.json  bad-sequence-2.json  bad-sequence-3.json  clothing-large.json  clothing-small.json  embedded-single-quotes.json  empty-array-with-whitespace.json  empty-object-with-whitespace.json  escaped-string.json  illegal-sequence.json  invalid-json-strings.json  lil.json  object-with-array-of-empty-objects.json  object-with-empty-array.json  object-with-empty-object.json  pancake.json  simple-object-1.json  simple-object-2.json  singles.json  twitter.json  unescaped-string.json
tests/ldump-data/: all-single-values.lua  all-single-values.tpl  execution.lua  execution.tpl  function-within-table.lua  mult-four.lua  mult-one.lua  mult-three.lua  mult-two.lua  mult.tpl  one-level-deep-table.lua  one-level-deep-table.tpl  query.lua  query.tpl  two-level-deep-table.lua  two-level-deep-table.tpl
tests/render/: castigan.lua  castigan.tpl  multi.tpl  simple.lua  simple.tpl
tests/render-data/castigan/: castigan.tpl
tests/scripts/: dd.sh
tests/sql-data/: ges.create.sql  ges.import.sql  ges.txt
tests/ssl/: cert.pem  key.pem
www/: config.lua  head.html  index.html  tail.html
www/assets/: default.css
(+7 files in other folders)
